--- a/resources/sass/popup.scss
+++ b/resources/sass/popup.scss
@@ -139,4 +139,8 @@ $breakpoint-tablet: 768px;
         border-radius: 0;
         min-width: 100%;
     }
+
+    .popup-body {
+        padding: 60 20px;
+    }
 }
