--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -2,6 +2,11 @@ body {
     overflow: hidden;
 }
 
+.scrollbar-thin{
+    scrollbar-width: thin;
+    scrollbar-color: #d5d5d5 #ededed;
+}
+
 svg {
     pointer-events: none;
 
