--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -181,6 +181,14 @@ svg {
     color: #555;
     display: flex;
     align-items: center;
+
+    h3 {
+        font-weight: 600;
+        margin-bottom: 8px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
 }
 
 .from-details * {
