--- a/resources/sass/popup.scss
+++ b/resources/sass/popup.scss
@@ -138,6 +138,7 @@ $breakpoint-tablet: 768px;
         border: 0;
         border-radius: 0;
         min-width: 100%;
+        padding:25px 10px;
     }
 
     .popup-body {
