--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -132,8 +132,11 @@ svg {
             padding: 0;
 
             .form-name {
-                min-width: 160px;
+                width: 200px;
                 font-weight: 500;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                overflow: hidden;
             }
 
             .list-content {
@@ -162,6 +165,60 @@ svg {
         }
     }
 }
+
+//dark mode customization
+
+.dark .list-wraper .mail-list.mail-list-item {
+    border-color: #0b0b0b;
+}
+
+.dark .list-wraper .mail-list.mail-list-item:hover {
+    background: rgba(0, 0, 0, .2);
+}
+
+.dark .checkbox-wrapper-31 .background {
+    fill: #000;
+}
+
+.dark .unread.mail-list.mail-list-item {
+    background: #1a1d24;
+}
+
+.dark .close-view-button {
+    background: #31353c;
+    border-color: #4a4a4a;
+
+    svg {
+        color: #fff;
+    }
+}
+
+.dark .header-subject h3 {
+    color: #ddd;
+}
+
+.dark .btn-action {
+    background: #000;
+    color: #ddd;
+
+    svg {
+        color: #aaa;
+    }
+}
+
+.dark .from-details .actions .btn-action:hover {
+    background: #282828;
+}
+
+.dark .message-header {
+    border-color: #000;
+}
+
+.dark .popup-body {
+	border: 1px solid #313a49;
+	background: linear-gradient(-40deg, rgb(13, 21, 38), rgb(28, 37, 49));
+}
+
 
 .mail-details {
     display: none;
@@ -224,9 +281,10 @@ svg {
 
 .message-body {
     padding: 16px;
-    height: calc(100% - 70px);
+    height: calc(100% - 66px);
     box-sizing: border-box;
     overflow-y: auto;
+    background-color: #fff;
     scrollbar-width: thin;
 }
 
@@ -315,6 +373,8 @@ svg {
         max-width: 400px;
         margin: -1px 0;
 
+        
+
         .name-wraper {
             flex-direction: column;
             align-items: flex-start;
@@ -342,48 +402,99 @@ svg {
     }
 }
 
-// table
-.data-table {
-
-    /* Apply a border and set cell spacing */
-    table {
-        border-collapse: collapse;
-        width: 100%;
-        border: 1px solid #ddd;
-        font-size: 14px;
-    }
-
-    /* Style table headers */
-    th {
-        background-color: #f2f2f2;
-        text-align: left;
-        padding: 10px;
-    }
-
-    /* Style table rows alternately for better readability */
-    tr:nth-child(even) {
-        background-color: #f2f2f2;
-    }
-
-    /* Style table cells */
-    td,
-    th {
-        border: 1px solid #ddd;
-        padding: 2px 10px;
-    }
-
-    /* Hover effect for rows */
-    tr:hover {
-        background-color: #f9f9f9;
-    }
-
-
+.dark #main.details-open  #mails .list-wraper {
+    border: 1px solid #000;
 }
+
+/* Base Styles for Table */
+.table-wraper {
+    margin: 20px 0;
+    /* Margin around the table container */
+    padding: 10px;
+    /* Padding inside the table container */
+}
+
+.table-wraper table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.table-wraper th,
+.table-wraper td {
+    padding: 5px 8px;
+    /* Beautiful padding for table cells */
+    border: 1px solid #ddd;
+    /* Border color for table cells */
+    text-align: left;
+    /* Align text to the left */
+}
+
+.table-wraper th {
+    background-color: #f4f4f4;
+    /* Light background for table headers */
+    font-weight: bold;
+}
+
+.table-wraper tr:nth-child(even) {
+    background-color: #f9f9f9;
+    /* Light striped design for even rows */
+}
+
+.table-wraper tr:nth-child(odd) {
+    background-color: #fff;
+    /* White background for odd rows */
+}
+
+.table-wraper tr:hover {
+    background-color: #e2e2e2;
+    /* Highlight row on hover */
+}
+
+/* Dark Mode Styles */
+.dark .table-wraper {
+    margin: 20px 0;
+    padding: 10px;
+}
+
+.dark .table-wraper table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.dark .table-wraper th,
+.dark .table-wraper td {
+    padding: 5px 8px;
+    border: 1px solid #1f2937;
+    /* Darker border color for table cells */
+    text-align: left;
+}
+
+.dark .table-wraper th {
+    background-color: #1f2937;
+    /* Darker background for table headers */
+    color: #f1f1f1;
+    /* Lighter text color for table headers */
+}
+
+.dark .table-wraper tr:nth-child(even) {
+    background-color: #2f3e53;
+    /* Darker striped design for even rows */
+}
+
+.dark .table-wraper tr:nth-child(odd) {
+    background-color: #16263d;
+    /* Even darker background for odd rows */
+}
+
+.dark .table-wraper tr:hover {
+    background-color: #444;
+    /* Highlight row on hover in dark mode */
+}
+
 
 input[type="text"],
 input[type="number"],
 input[type="password"] {
-    border: 1px solid #ddd;
     width: 100%;
     padding: 4px 8px;
 }
